// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorksheetContainer snapshot matches snapshot when location hash is #gist 1`] = `
<DocumentFragment>
  <main
    class="workbook worksheet-container"
  >
    <div
      class="worksheet-header"
      role="tablist"
    >
      <span
        aria-controls="info-tabpanel"
        aria-selected="false"
        class="section-button"
        id="info-tab"
        role="tab"
      >
        <a
          class="local-navlink local-navlink-info"
          data-section="info"
          href="/workbook/component#info"
          id="info-tab-navlink"
          rel="noreferrer"
          target="_self"
        >
          <img
            alt="Info icon"
            class="icon icon-info"
            src="image-mock"
          />
          <span
            class="text-section-button"
          >
            info
          </span>
        </a>
      </span>
      <span
        aria-controls="worksheet-tabpanel"
        aria-selected="false"
        class="section-button"
        id="worksheet-tab"
        role="tab"
      >
        <a
          class="local-navlink local-navlink-worksheet"
          data-section="worksheet"
          href="/workbook/component"
          id="worksheet-tab-navlink"
          rel="noreferrer"
          target="_self"
        >
          <img
            alt="Component icon"
            class="icon icon-component"
            src="image-mock"
          />
          <span
            class="text-section-button"
          >
            component
          </span>
        </a>
      </span>
      <span
        aria-controls="gist-tabpanel"
        aria-selected="true"
        class="section-button"
        id="gist-tab"
        role="tab"
      >
        <a
          class="local-navlink local-navlink-gist active"
          data-section="gist"
          href="/workbook/component#gist"
          id="gist-tab-navlink"
          rel="noreferrer"
          target="_self"
        >
          <img
            alt="Code icon"
            class="icon icon-code"
            src="image-mock"
          />
          <span
            class="text-section-button"
          >
            gist
          </span>
        </a>
      </span>
    </div>
    <div
      class="worksheet-section gist-wrapper"
      id="gist-tabpanel"
      role="tabpanel"
      tabindex="0"
    >
      <iframe
        id="worksheet-gist"
        referrerpolicy="no-referrer"
        sandbox="allow-scripts allow-top-navigation"
        src="/gists/component"
        title="Component gist"
      />
    </div>
    <div
      class="worksheet-footer"
    />
  </main>
</DocumentFragment>
`;

exports[`WorksheetContainer snapshot matches snapshot when location hash is #info 1`] = `
<DocumentFragment>
  <main
    class="workbook worksheet-container"
  >
    <div
      class="worksheet-header"
      role="tablist"
    >
      <span
        aria-controls="info-tabpanel"
        aria-selected="true"
        class="section-button"
        id="info-tab"
        role="tab"
      >
        <a
          class="local-navlink local-navlink-info active"
          data-section="info"
          href="/workbook/component#info"
          id="info-tab-navlink"
          rel="noreferrer"
          target="_self"
        >
          <img
            alt="Info icon"
            class="icon icon-info"
            src="image-mock"
          />
          <span
            class="text-section-button"
          >
            info
          </span>
        </a>
      </span>
      <span
        aria-controls="worksheet-tabpanel"
        aria-selected="false"
        class="section-button"
        id="worksheet-tab"
        role="tab"
      >
        <a
          class="local-navlink local-navlink-worksheet"
          data-section="worksheet"
          href="/workbook/component"
          id="worksheet-tab-navlink"
          rel="noreferrer"
          target="_self"
        >
          <img
            alt="Component icon"
            class="icon icon-component"
            src="image-mock"
          />
          <span
            class="text-section-button"
          >
            component
          </span>
        </a>
      </span>
      <span
        aria-controls="gist-tabpanel"
        aria-selected="false"
        class="section-button"
        id="gist-tab"
        role="tab"
      >
        <a
          class="local-navlink local-navlink-gist"
          data-section="gist"
          href="/workbook/component#gist"
          id="gist-tab-navlink"
          rel="noreferrer"
          target="_self"
        >
          <img
            alt="Code icon"
            class="icon icon-code"
            src="image-mock"
          />
          <span
            class="text-section-button"
          >
            gist
          </span>
        </a>
      </span>
    </div>
    <div
      class="worksheet-section info-wrapper"
      id="info-tabpanel"
      role="tabpanel"
      tabindex="0"
    >
      <div
        class="worksheet-info"
      >
        <div
          class="worksheet-info-inner"
        >
          <div
            class="component-mock"
            role="document"
          >
             
          </div>
        </div>
      </div>
    </div>
    <div
      class="worksheet-footer"
    />
  </main>
</DocumentFragment>
`;

exports[`WorksheetContainer snapshot matches snapshot when location hash is empty 1`] = `
<DocumentFragment>
  <main
    class="workbook worksheet-container"
  >
    <div
      class="worksheet-header"
      role="tablist"
    >
      <span
        aria-controls="info-tabpanel"
        aria-selected="false"
        class="section-button"
        id="info-tab"
        role="tab"
      >
        <a
          class="local-navlink local-navlink-info"
          data-section="info"
          href="/workbook/component#info"
          id="info-tab-navlink"
          rel="noreferrer"
          target="_self"
        >
          <img
            alt="Info icon"
            class="icon icon-info"
            src="image-mock"
          />
          <span
            class="text-section-button"
          >
            info
          </span>
        </a>
      </span>
      <span
        aria-controls="worksheet-tabpanel"
        aria-selected="true"
        class="section-button"
        id="worksheet-tab"
        role="tab"
      >
        <a
          class="local-navlink local-navlink-worksheet active"
          data-section="worksheet"
          href="/workbook/component"
          id="worksheet-tab-navlink"
          rel="noreferrer"
          target="_self"
        >
          <img
            alt="Component icon"
            class="icon icon-component"
            src="image-mock"
          />
          <span
            class="text-section-button"
          >
            component
          </span>
        </a>
      </span>
      <span
        aria-controls="gist-tabpanel"
        aria-selected="false"
        class="section-button"
        id="gist-tab"
        role="tab"
      >
        <a
          class="local-navlink local-navlink-gist"
          data-section="gist"
          href="/workbook/component#gist"
          id="gist-tab-navlink"
          rel="noreferrer"
          target="_self"
        >
          <img
            alt="Code icon"
            class="icon icon-code"
            src="image-mock"
          />
          <span
            class="text-section-button"
          >
            gist
          </span>
        </a>
      </span>
    </div>
    <div
      class="worksheet-section worksheet-wrapper component-wrapper"
      id="worksheet-tabpanel"
      role="tabpanel"
      tabindex="0"
    >
      <div
        class="component-mock"
        role="document"
      >
         
      </div>
    </div>
    <div
      class="worksheet-footer"
    />
  </main>
</DocumentFragment>
`;
